bugfix(table): fix table scrollbar-thumb  #782

--- a/packages/tab/src/tab.less
+++ b/packages/tab/src/tab.less
@@ -61,12 +61,6 @@
         width: 0;
         height: 0;
       }
-
-      &::-webkit-scrollbar-thumb {
-        background: #dcdee5;
-        border-radius: 50%;
-        box-shadow: inset 0 0 6px rgba(204, 204, 204, .3);
-      }
     }
 
     &-next,
